Update SpringBoot 3.2.0 and SecurityConfig